openmediavault (0.5.0.14) stable; urgency=low

  * Various improvements and bugfixes.
  * Modify fstab script to write special fstab entries at the end.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 26 Jun 2013 10:42:31 +0200

openmediavault (0.5.0.13) stable; urgency=low

  * Fix bug in OMV.Rpc.
  * Various improvements and bugfixes.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 22 Jun 2013 13:21:16 +0200

openmediavault (0.5.0.12) stable; urgency=low

  * Fix global environment variable issue.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 22 Jun 2013 11:35:06 +0200

openmediavault (0.5.0.11) stable; urgency=low

  * Update locales.
  * Set the setgid bit on shared folders.
  * Improve error handling in OMV.window.Execute dialog.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 17 Jun 2013 17:40:08 +0200

openmediavault (0.5.0.10) stable; urgency=low

  * Use SVG icons if possible.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 16 Jun 2013 19:35:17 +0200

openmediavault (0.5.0.9) stable; urgency=low

  * Various improvements and bugfixes.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Jun 2013 19:21:28 +0200

openmediavault (0.5.0.8) stable; urgency=low

  * Various improvements and bugfixes.
  * Fix issue in method OMVSoftwareRaidDevice::getState().

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Jun 2013 20:49:40 +0200

openmediavault (0.5.0.7) stable; urgency=low

  * Fix issue in RPC Plugin::getList.
  * Change various icons.
  * Various improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Jun 2013 18:25:01 +0200

openmediavault (0.5.0.6) stable; urgency=low

  * Various improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 10 Jun 2013 21:38:24 +0200

openmediavault (0.5.0.5) stable; urgency=low

  * Fix bug in RPC Config::applyChanges().
  * Fix various issues.
