@@ -42,13 +42,13 @@ OMV_ENGINED_SO_RCVTIMEO=180
 OMV_ENGINED_DIRTY_MODULES_FILE="/var/lib/openmediavault/dirtymodules.json"
 OMV_INITSYSTEM_SCRIPTS_DIR="/usr/share/openmediavault/initsystem"
 OMV_INITSYSTEM_FILE="/var/lib/openmediavault/initsystem.req"
-OMV_FSTAB_MNTOPS_EXT3="defaults,acl,user_xattr,noexec,usrjquota=aquota.user,grpjquota=aquota.group,jqfmt=vfsv0"
-OMV_FSTAB_MNTOPS_EXT4="defaults,acl,user_xattr,noexec,usrjquota=aquota.user,grpjquota=aquota.group,jqfmt=vfsv0"
-OMV_FSTAB_MNTOPS_JFS="defaults,noexec,usrquota,grpquota"
-OMV_FSTAB_MNTOPS_XFS="defaults,noexec,usrquota,grpquota"
-OMV_FSTAB_MNTOPS_VFAT="defaults"
-OMV_FSTAB_MNTOPS_NTFS="defaults"
-OMV_FSTAB_MNTOPS_HFSPLUS="defaults,force"
+OMV_FSTAB_MNTOPS_EXT3="defaults,nofail,acl,user_xattr,noexec,usrjquota=aquota.user,grpjquota=aquota.group,jqfmt=vfsv0"
+OMV_FSTAB_MNTOPS_EXT4="defaults,nofail,acl,user_xattr,noexec,usrjquota=aquota.user,grpjquota=aquota.group,jqfmt=vfsv0"
+OMV_FSTAB_MNTOPS_JFS="defaults,nofail,noexec,usrquota,grpquota"
+OMV_FSTAB_MNTOPS_XFS="defaults,nofail,noexec,usrquota,grpquota"
+OMV_FSTAB_MNTOPS_VFAT="defaults,nofail"
+OMV_FSTAB_MNTOPS_NTFS="defaults,nofail"
+OMV_FSTAB_MNTOPS_HFSPLUS="defaults,nofail,force"
 OMV_USERMGMT_DEFAULT_GROUP="users"
 OMV_RRDGRAPH_DIR="/var/lib/openmediavault/rrd"
 OMV_RRDGRAPH_ERROR_IMAGE="/usr/share/openmediavault/icons/rrd_graph_error_64.png"
