@@ -22,14 +22,48 @@
 set -e
 
 . /etc/default/openmediavault
+. /usr/share/openmediavault/scripts/helper-functions
 
 OMV_MONIT_CONFIG=${OMV_MONIT_CONFIG:-"/etc/monit/monitrc"}
 OMV_MONIT_SERVICE_FILESYSTEM_SPACEUSAGE=${OMV_MONIT_SERVICE_FILESYSTEM_SPACEUSAGE:-"80"}
 
-cat <<EOF >> ${OMV_MONIT_CONFIG}
+if [ "$(omv_config_get "//system/notification/notifications/monitfilesystems")" = "1" ]; then
+	# Monitor root filesystem.
+	cat <<EOF >> ${OMV_MONIT_CONFIG}
 # Alert if disk space of root filesystem gets low
 check filesystem rootfs with path /
   if space usage > ${OMV_MONIT_SERVICE_FILESYSTEM_SPACEUSAGE}% for 5 times within 15 cycles
     then alert else if succeeded for 10 cycles then alert
 
 EOF
+
+	# Monitor mounted filesystems.
+	xmlstarlet sel -t \
+	  -m "//system/fstab/mntent[not(contains(opts,'bind') or contains(opts,'loop'))]" \
+		-v uuid \
+		-i "position() != last()" -n -b \
+	  -b \
+	  ${OMV_CONFIG_FILE} | xmlstarlet unesc |
+	  while read uuid; do
+		  fsname=$(omv_config_get "//system/fstab/mntent[uuid='${uuid}']/fsname")
+		  dir=$(omv_config_get "//system/fstab/mntent[uuid='${uuid}']/dir")
+		  # Try to get an unique block special device.
+		  path=${fsname}
+		  if omv_isfsuuid "${path}"; then
+			  path="/dev/disk/by-uuid/${path}"
+		  fi
+		  # Try to generate a unique identifier.
+		  fscheckname=$(echo "fs${path}" | tr "/" "_")
+		  progcheckname=$(echo "mp${dir}" | tr "/" "_")
+		  cat <<EOF >> ${OMV_MONIT_CONFIG}
+# Alert if filesystem is missing or disk space gets low
+check filesystem ${fscheckname} with path ${path}
+  if space usage > ${OMV_MONIT_SERVICE_FILESYSTEM_SPACEUSAGE}% for 5 times within 15 cycles
+	then alert else if succeeded for 10 cycles then alert
+#Check requires monit 5.4 (included in Wheezy).
+#check program ${progcheckname} with path "mountpoint -q '${dir}'"
+#  if status == 1 then alert
+
+EOF
+	  done
+fi
